--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -15,11 +15,13 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  fluttertoast: ^8.0.8
   flutter:
     sdk: flutter
 
   ez_validator:
     path: ../
+  
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
