--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,5 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
+  test: ^1.16.8
   flutter_lints: ^1.0.0
